2023 March/April Updates - Updated the Wild Isles case study text, fixed small issue with taskbar styling on mobile, adjusted the WI browser card text

--- a/src/scss/Portfolio-scss/Browser-window/browser-window.scss
+++ b/src/scss/Portfolio-scss/Browser-window/browser-window.scss
@@ -289,6 +289,13 @@
         z-index: 0;
       }
 
+      h2,
+      .projects__title {
+        font-size: rem(20px);
+        margin-bottom: 24px;
+        max-width: 300px;
+      }
+
       .btn {
         background-color: $wildisles-yellow;
         border: $wildisles-yellow;
